# Pico-7-Segment-Clock

./: CMakeLists.txt  LICENCE  README.md  main.c
Fritzing/: Untitled Sketch.fzz  pico_7_segment_clock.fzz
